angepasst an mehrere Messstellen